<resources>
    <string name="app_name">BitTest_TP1</string>
    <string name="picture_description">picture</string>

    <string name="return_button">Return</string>

    <string name="change_picture_button">Change picture</string>
    <string name="multicolor_button">Multicolor</string>

    <string name="reset_c_button">Reset</string>

    <string name="convolution_button">Filters</string>
    <string name="average_button">Average</string>
        <string name="average_3_button">3*3</string>
        <string name="average_7_button">7*7</string>
        <string name="average_15_button">15*15</string>
    <string name="gaussien_button">Gaussien 5*5</string>
    <string name="prewitt_button">Prewitt</string>
        <string name="prewitt_horizontal_button">Horizontal</string>
        <string name="prewitt_all_button">All</string>
        <string name="prewitt_vertical_button">Vertical</string>
    <string name="sobel_button">Sobel</string>
        <string name="sobel_horizontal_button">Horizontal</string>
        <string name="sobel_all_button">All</string>
        <string name="sobel_vertical_button">Vertical</string>
    <string name="laplacien_button">Laplacien</string>
        <string name="laplacien_4_button">4 cx</string>
        <string name="laplacien_8_button">8 cx</string>

    <string name="random_button">Random color</string>
    <string name="negative_button">Negative</string>
    <string name="linear_transformation_button">Linear extansion</string>
    <string name="gray_button">Gray</string>

    <string name="test_button">Test</string>

    <string name="egalisation_histogram_button">Egalisation histogram</string>

    <string name="saturation_button">Change saturation</string>
        <string name="saturation_text">Saturation</string>
        <string name="saturation_more_button">+ 1</string>
        <string name="saturation_less_button">- 1</string>

    <string name="brightness_button">Change brightness</string>
        <string name="brightness_text">Brightnesss</string>
        <string name="brightness_more_button">+1</string>
        <string name="brightness_less_button">-1</string>

    <string name="selected_color_button">Selected colors</string>
        <string name="selected_color_text">Selected colors</string>
        <string name="color_more_1_left_button">+10 left</string>
        <string name="color_less_1_left_button">-10 left</string>
        <string name="color_more_1_right_button">+10 right</string>
        <string name="color_less_1_right_button">-10 right</string>

    <string name="gray_button_rs">Gray</string>
    <string name="negative_button_rs">Negative</string>
    <string name="random_button_rs">Random</string>

    <string-array name="pictures">
        <item>Choose the picture</item>
        <item>Multicolor</item>
        <item>Cat</item>
        <item>Girl</item>
    </string-array>

</resources>
