<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset_c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_c_button"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picture_description"
            android:src="@drawable/multicolor"
            android:layout_gravity="center"/>

        <HorizontalScrollView
            android:id="@+id/scroll_parameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saturation_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation_button" />

                <Button
                    android:id="@+id/selected_color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_color_button"/>

                <Button
                    android:id="@+id/random_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_button" />

                <Button
                    android:id="@+id/gray_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gray_button" />

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/saturation_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/saturation_text"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saturation_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation_more_button" />

                <Button
                    android:id="@+id/saturation_less_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation_less_button" />

            </LinearLayout>

            <Button
                android:id="@+id/saturation_return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/return_saturation_button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selected_color_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selected_color_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selected_color_more_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_more_1_left_button"/>

                <Button
                    android:id="@+id/selected_color_less_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_less_1_left_button"/>

                <Button
                    android:id="@+id/selected_color_more_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_more_1_right_button"/>

                <Button
                    android:id="@+id/selected_color_less_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_less_1_right_button"/>

            </LinearLayout>

            <Button
                android:id="@+id/selected_color_return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/return_selected_color_button"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>